--- a/.env-example
+++ b/.env-example
@@ -1,17 +1,16 @@
-API_ID=
-API_HASH=
+API_ID=27984338
+API_HASH=06fa7b71c9004aedc02f6aa225f5008d
+REF_ID=0000q91P
+POINTS_COUNT=400,800
+FAKE_USERAGENT=True
+AUTO_PLAY_GAME=True
+AUTO_TASK=True
+AUTO_DAILY_REWARD=True
+AUTO_CLAIM_STARS=True
+AUTO_CLAIM_COMBO=True
+AUTO_RANK_UPGRADE=True
 
-REF_ID=
-POINTS_COUNT=
-FAKE_USERAGENT=
-AUTO_PLAY_GAME=
-AUTO_TASK=
-AUTO_DAILY_REWARD=
-AUTO_CLAIM_STARS=
-AUTO_CLAIM_COMBO=
-AUTO_RANK_UPGRADE=
+USE_RANDOM_DELAY_IN_RUN=True
+RANDOM_DELAY_IN_RUN=0,10
 
-USE_RANDOM_DELAY_IN_RUN=
-RANDOM_DELAY_IN_RUN=
-
-USE_PROXY_FROM_FILE=
+USE_PROXY_FROM_FILE=True
